ost-images: Create '*-pkglist{-diff}.txt' files
This patch adds '*-pklist{-diff}.txt' file generation feature.

They are created for each of the built qcow images and contain
a list of all installed packages, which is a result of running:

 rpm -qa | sort

and a diff between each layer and it's base layer i.e.:

 diff el8-upgrade-pkglist.txt el8-base-pkglist.txt > el8-upgrade-pkglist-diff.txt

Change-Id: I05d55afb1cd4382dc34239d40bf6f97e5e76373d
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ ost-images/*.qcow2
 ost-images/*.qcow2.tmp
 ost-images/*.spec
 ost-images/*.tar.gz
+ost-images/*-pkglist*.txt
 ost-images/*-provision-*.sh
 ost-images/COPYING
 ost-images/INSTALL
