ost-images: Make the iso an 'intermediate' target
This is an optimization that allows us not to put the iso
in the dist tarball. When the iso is marked as intermediate,
if the base qcow2 image exists, but the iso (on which the qcow2
image depends) doesn't, make doesn't mind.

Change-Id: I07e820849b2df212bcf9f6a584a0be3ccd310af2
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -107,6 +107,8 @@ _LOCATION := $(if $(_USING_ISO),$(DISTRO).iso,$(INSTALL_URL))
 
 ks: $(DISTRO).ks
 
+.INTERMEDIATE: $(DISTRO).iso
+
 iso: $(DISTRO).iso
 
 base: $(DISTRO)-base.qcow2
@@ -139,7 +141,6 @@ clean-local:
 dist_image_DATA = \
 	$(if $(BUILD_BASE),$(DISTRO)-base.qcow2) \
 	$(if $(BUILD_BASE),$(DISTRO).ks) \
-	$(if $(and $(BUILD_BASE),$(_USING_ISO)),$(DISTRO).iso) \
 	$(DISTRO)-engine-installed.qcow2 \
 	$(DISTRO)-host-installed.qcow2 \
 	$(DISTRO)-upgrade.qcow2 \
@@ -152,7 +153,6 @@ dist_image_SCRIPTS = \
 	$(NULL)
 
 CLEANFILES = \
-	*.iso \
 	*.ks \
 	*.qcow2 \
 	*.qcow2.tmp \
