ost-images: Use installation prefix for base image
When using the pre-installed base image we've hard-coded the '$(imagedir)'
to be the path to the qcow file. This is not always true - the RPMs are
relocatable, so we should use real installation prefix instead.

Change-Id: I73772bc5e283cc62a2fe63c02e7e2204266a9a9b
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -18,7 +18,7 @@ BUILD_BASE := $(findstring not installed,$(shell rpm -q $(PACKAGE_NAME)-$(DISTRO
 
 # Use either the base image that's built locally
 # or the one that's already installed
-_BASE_IMAGE_PREFIX := $(if $(BUILD_BASE),,$(imagedir)/)
+_BASE_IMAGE_PREFIX := $(if $(BUILD_BASE),,$(shell rpm -q --queryformat '%{INSTPREFIXES}' $(PACKAGE_NAME)-$(DISTRO)-base)/$(PACKAGE_NAME)/)
 
 # Empty string when using repo-based installs, ".iso" otherwise
 _USING_ISO := $(findstring .iso,$(INSTALL_URL))
