ost-images: Use -f and -F to define image format
This patch adds '-f qcow2' and '-F qcow2' options when using
qemu-img to define the format of the images explicitly.

Change-Id: Ia57b7cdd12b318d3d96938146915ae753ec7c41c
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -77,7 +77,7 @@ _DIFF := -diff --new-line-format="" --unchanged-line-format=""
 	mv $@.tmp $@
 
 %-upgrade.qcow2: $(if $(BUILD_BASE),%-base.qcow2)
-	qemu-img create -f qcow2 -b $(_BASE_IMAGE_PREFIX)$(*)-base.qcow2 $@.tmp
+	qemu-img create -f qcow2 -F qcow2 -b $(_BASE_IMAGE_PREFIX)$(*)-base.qcow2 $@.tmp
 #	See the remark above about chmod.
 	chmod 666 $@.tmp
 	virt-customize \
@@ -92,7 +92,7 @@ _DIFF := -diff --new-line-format="" --unchanged-line-format=""
 	cp $(PROVISION_ENGINE_SCRIPT) $@
 
 %-engine-installed.qcow2: %-upgrade.qcow2 %-provision-engine.sh
-	qemu-img create -f qcow2 -b $*-upgrade.qcow2 $@.tmp
+	qemu-img create -f qcow2 -F qcow2 -b $*-upgrade.qcow2 $@.tmp
 #	See the remark above about chmod.
 	chmod 666 $@.tmp
 	virt-customize \
@@ -106,7 +106,7 @@ _DIFF := -diff --new-line-format="" --unchanged-line-format=""
 	cp $(PROVISION_HOST_SCRIPT) $@
 
 %-host-installed.qcow2: %-upgrade.qcow2 %-provision-host.sh
-	qemu-img create -f qcow2 -b $*-upgrade.qcow2 $@.tmp
+	qemu-img create -f qcow2 -F qcow2 -b $*-upgrade.qcow2 $@.tmp
 #	See the remark above aboud chmod.
 	chmod 666 $@.tmp
 	virt-customize \
@@ -156,9 +156,9 @@ all: $(if $(BUILD_BASE),base) upgrade engine host spec
 .PHONY: rebase-images
 rebase-images:
 	echo "rebasing"
-	qemu-img rebase -u -b "$(imagedir)/$(DISTRO)-base.qcow2" "$(distdir)/$(DISTRO)-upgrade.qcow2"
-	qemu-img rebase -u -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-host-installed.qcow2"
-	qemu-img rebase -u -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-engine-installed.qcow2"
+	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-base.qcow2" "$(distdir)/$(DISTRO)-upgrade.qcow2"
+	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-host-installed.qcow2"
+	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-engine-installed.qcow2"
 
 gen-VERSION:
 	if test -d ../.git; then                                             \
