ost-images: Use OST images when available
This patch switches el8-based basic and network suites
to use prebuilt VM images [1]. El7 runs are unaffected.

Since the images already have host- and engine-related
RPMs installed, we need to add a simple 'dnf upgrade' run
before the tests kick in. This is needed in case someone provides
extra repos with custom-built versions of those RPMs.
This is a temporary workaround - ultimately we want to build
a VM image with custom RPMs before OST run automatically
and get rid of all the deployment scripts.

When running inside mock, we have to make the qcows visible by both
libvirt, which is running outside of mock, and lago, which is running
inside the mock. This is why we create an 'ost-images-XXXXXX' directory
in '/var/lib/lago/' and make copies of images there.

[1] https://templates.ovirt.org/yum/

Change-Id: Ie64a2e26504d3252220178262ff22b6ccb9e074c
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -23,6 +23,10 @@ domains:
     disks:
       - template_name: {{ templates.engine }}
         type: template
+        {% if env.use_ost_images == "1" -%}
+        template_type: qcow2
+        path: {{ env.engine_image }}
+        {%- endif %}
         name: root
         dev: vda
         format: qcow2
@@ -42,6 +46,9 @@ domains:
       ovirt-engine-password: 123
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        {% if env.use_ost_images == "1" -%}
+        - $LAGO_INITFILE_PATH/deploy-scripts/dnf_upgrade.sh
+        {%- endif %}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_sar_stat.sh
         {%- if install_storage_with_lago_deploy|default(true) %}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified_el7.sh
@@ -84,12 +91,19 @@ domains:
     disks:
       - template_name: {{ templates.host }}
         type: template
+        {% if env.use_ost_images == "1" -%}
+        template_type: qcow2
+        path: {{ env.host_image }}
+        {%- endif %}
         name: root
         dev: vda
         format: qcow2
     metadata:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        {% if env.use_ost_images == "1" -%}
+        - $LAGO_INITFILE_PATH/deploy-scripts/dnf_upgrade.sh
+        {%- endif %}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_sar_stat.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
         {% if loop.first and install_ovirt_host|default(false) -%}
