basic: Add support for running on el8
This patch adds stuff necessary to run basic suite
on el8 with py3.

Change-Id: I080982c6b7f3c926adbde13b1e5c66ef89f49994
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>
Signed-off-by: Ehud Yonasi <eyonasi@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -18,7 +18,10 @@ stage:
         - dr_suite_master
         - basic_suite_4.2
         - basic_suite_4.3
-        - basic_suite_master
+        - basic_suite_master:
+            distributions:
+              - el7
+              - el8
         - compat-4.2_suite_master
         - compat-4.3_suite_master
         - he-basic-ipv6_suite_4.3
@@ -73,7 +76,7 @@ stage:
       script:
         fromfile: 'automation/ost-images.sh'
 runtime-requirements:
+  hostdistro: same
   support-nesting-level: 2
-  isolation_level: container
 release-branches:
   master: [ovirt-master, ovirt-4.3]
