ost-images: Don't use 'dist' target for RPMs
It doesn't make sense to build the whole 'dist' archive
just to extract it a moment later for RPM-building purposes.
This patch changes the behavior of RPM building, so that
'dist' archive is not needed and the RPMs are built in-place.

Change-Id: I89342f89bf00f51deb0c6ec8eb31e6472a95502b
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -215,10 +215,11 @@ EXTRA_DIST = \
 	template.ks.in \
 	$(NULL)
 
-rpm: dist
-	rpmbuild -tb \
+rpm: spec
+	rpmbuild -bb \
 		--define "distro $(DISTRO)" \
 		--define "release $(PACKAGE_RELEASE)" \
 		--define "with_base $(if $(BUILD_BASE),1,0)" \
 		--define "dummy_upgrade $(if $(DUMMY_UPGRADE),1,0)" \
-		$(DIST_ARCHIVES)
+		--build-in-place \
+		ost-images.spec
