ost-images: Always build base image for repo-based installations
Until now, the decision whether to build the base image or not was
solely based on the presence of the package on the build machine - if you
had 'ost-images-{distro}-base' package installed, we used the installed
version to build other layers.

This is not correct for repo-based installations - in this case the base layer
actually performs the function of both base and upgrade layers, so we should
always rebuild the base image. This patch implements that behavior.

Change-Id: I52ae6af71f746a844333733636357fdfa08dec66
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -10,18 +10,19 @@ INSTALL_URL := "http://isoredirect.centos.org/centos/8/isos/x86_64/CentOS-8.1.19
 # The url of root of repos, can be overriden by running with 'make REPO_ROOT=...'
 REPO_ROOT := "http://mirror.centos.org/centos/8/"
 
-# Whether to build the base image or not. Looks for installed base package
+# Empty string when using repo-based installs, ".iso" otherwise
+_USING_ISO := $(findstring .iso,$(INSTALL_URL))
+
+# Whether to build the base image or not. For repo-based installation always
+# set to "yes". For iso-based installations looks for installed base package
 # and if finds one, base won't be built. Can be overriden by running
 # with 'make BUILD_BASE=...'. Any non-empty string will be treated as true
 # and an empty string is treated as false.
-BUILD_BASE := $(findstring not installed,$(shell rpm -q $(PACKAGE_NAME)-$(DISTRO)-base))
+BUILD_BASE := $(if $(_USING_ISO),$(findstring not installed,$(shell rpm -q $(PACKAGE_NAME)-$(DISTRO)-base)),yes)
 
 # Use either the base image that's built locally
 # or the one that's already installed
 _BASE_IMAGE_PREFIX := $(if $(BUILD_BASE),,$(shell rpm -q --queryformat '%{INSTPREFIXES}' $(PACKAGE_NAME)-$(DISTRO)-base)/$(PACKAGE_NAME)/)
-
-# Empty string when using repo-based installs, ".iso" otherwise
-_USING_ISO := $(findstring .iso,$(INSTALL_URL))
 
 # Whether to build a real upgrade layer. Upgrade layer doesn't really make
 # sense in scenarios where you build from nightly repos.
