ost-images: Drop rebasing of qcows
With [1] lago can handle relative paths to backing images,
so we don't need all that rebasing of images we did until
now anymore.

[1] https://github.com/lago-project/lago/pull/812/commits/3922a89980420a67f968ed1244d4aa124f3bb1ca

Change-Id: I95070eda9b85aec3ee85c8aeba66be75b39bc7f1
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/ost-images/Makefile.am
+++ b/ost-images/Makefile.am
@@ -151,29 +151,12 @@ spec: ost-images.spec
 
 all: $(if $(BUILD_BASE),base) upgrade engine host spec
 
-# While qemu is fine with having relative paths
-# for backing images, lago is not. This is why we need
-# to rebase the images to paths where the backing
-# image lands after installation.
-.PHONY: rebase-images
-rebase-images:
-	echo "rebasing"
-	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-base.qcow2" "$(distdir)/$(DISTRO)-upgrade.qcow2"
-	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-host-installed.qcow2"
-	qemu-img rebase -u -f qcow2 -F qcow2 -b "$(imagedir)/$(DISTRO)-upgrade.qcow2" "$(distdir)/$(DISTRO)-engine-installed.qcow2"
-
 gen-VERSION:
 	if test -d ../.git; then                                             \
 		$(top_srcdir)/build-aux/pkg-version --full > $(distdir)/VERSION; \
 	fi
 
-# Since we rebase the image in the dist hook all targets
-# that depend on qcow files are considered outdated during rpm build,
-# so make tries to rebuild them... we need to touch them to avoid that.
-update-image-dependent-targets:
-	touch $(distdir)/*.txt
-
-dist-hook: gen-VERSION rebase-images update-image-dependent-targets
+dist-hook: gen-VERSION
 
 clean-local:
 	-virsh destroy $(DISTRO)-base
@@ -195,7 +178,6 @@ dist_image_DATA = \
 	$(NULL)
 
 dist_image_SCRIPTS = \
-	$(if $(BUILD_BASE),rebase_images.sh) \
 	$(DISTRO)-provision-engine.sh \
 	$(DISTRO)-provision-host.sh \
 	$(NULL)
