Add centos 8.2 image: el8.2-base
Change-Id: I874974c10e07795ee0c5522b155081545feed435
Signed-off-by: Galit <galfrid@gmail.com>

--- a/network-suite-master/vars/main.yml
+++ b/network-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  engine: el8.2-base-beta-1
-  host: el8.2-base-beta-1
+  engine: el8.2-base
+  host: el8.2-base
 hostCount: 2
 create_local_repo: add_local_repo_no_ext_access.sh
 
