--- a/basic-suite-master/vars/main.yml
+++ b/basic-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  engine: el8.2-base-beta-1
-  host: el8.2-base-beta-1
+  engine: el8.2-base
+  host: el8.2-base
 hostCount: 2
 install_storage_with_lago_deploy: true
 install_ovirt_host: true
