--- a/he-basic-suite-master/vars/main.yml
+++ b/he-basic-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  storage: el8.2-base-beta-1
-  host: el8.2-base-beta-1
+  storage: el8.2-base
+  host: el8.2-base
 hostCount: 2
 system_requirements:
   disk_space_gb: 20
