Add missing repo which has collectd-write_syslog
Change-Id: I09e1d9d30995c79e0929a68ef3ffa19e24eeeba1
Signed-off-by: Galit <galfrid@gmail.com>

--- a/common/yum-repos/ovirt-master-engine-cq.repo.in
+++ b/common/yum-repos/ovirt-master-engine-cq.repo.in
@@ -31,6 +31,12 @@ baseurl = http://mirror.centos.org/centos-8/8/PowerTools/x86_64/os/
 gpgcheck = 0
 enabled = 1
 
+[centos-opstools-el8]
+name=opstools
+baseurl = http://mirror.centos.org/centos/8/opstools/x86_64/collectd-5/
+gpgcheck = 0
+enabled = 1
+
 ## end centos repos
 
 ## from release rpm
