network: Run network suite master on el8
This patch adds an el8 run for master network suite along with
a small py2 vs py3 division fix.

Change-Id: I059b33ad0cc5c1dbf467d3d3fd564a697d69a71b
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -31,7 +31,10 @@ stage:
         - he-node-ng_suite_4.3
         - network_suite_4.2
         - network_suite_4.3
-        - network_suite_master
+        - network_suite_master:
+            distributions:
+              - el7
+              - el8
         - performance_suite_master
         - upgrade-from-release_suite_4.2
         - upgrade-from-release_suite_4.3
