Keep running el7 on containers.
While el8 needs to be run under baremetals, el7 can still run as before.

Change-Id: Icafa3693c25456a87f9c7faae40fe8e385862c16
Signed-off-by: Ehud Yonasi <eyonasi@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -17,7 +17,10 @@ stage:
         - basic_suite_master:
             distributions:
               - el7
-              - el8
+              - el8:
+                  runtime-requirements:
+                    hostdistro: same
+                    support-nesting-level: 2
         - compat-4.2_suite_master
         - compat-4.3_suite_master
         - he-basic-ipv6_suite_4.3
@@ -29,7 +32,10 @@ stage:
         - network_suite_master:
             distributions:
               - el7
-              - el8
+              - el8:
+                  runtime-requirements:
+                    hostdistro: same
+                    support-nesting-level: 2
         - performance_suite_master
         - upgrade-from-release_suite_4.3
         - upgrade-from-prevrelease_suite_4.3
@@ -75,5 +81,6 @@ stage:
 runtime-requirements:
   hostdistro: same
   support-nesting-level: 2
+  isolation_level: container
 release-branches:
   master: [ovirt-master, ovirt-4.3]
