Collect /tmp/yum_dnf.conf - bck repo conf file
it is a backup file of /etc/dnf/dnf.conf if exists
other it is backup of /etc/yum.conf

Change-Id: Id50db41b15f23f034a9b79ee500a820cf26bc2bc
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -78,6 +78,7 @@ domains:
       - /etc/yum
       - /etc/resolv.conf
       - /etc/yum.repos.d
+      - /tmp/dnf_yum.conf
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     <<: *vm-common-settings
@@ -116,6 +117,7 @@ domains:
       - /etc/resolv.conf
       - /var/log
       - /etc/yum.repos.d
+      - /tmp/dnf_yum.conf
       {% if env.coverage == "true" -%}
       - /var/lib/vdsm/coverage
       {%- endif %}
