smaller OST VMs
try to save 1GB RAM on typical OST run, make engine 512MB and hosts
256MB smaller.

Change-Id: I679f0b5f62fabaabff9ec23b675b49bc3456f398
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -23,7 +23,7 @@ OVESETUP_DB/securedHostValidation=bool:False
 OVESETUP_DB/port=int:5432
 OVESETUP_ENGINE_CORE/enable=bool:True
 OVESETUP_CORE/engineStop=none:None
-OVESETUP_SYSTEM/memCheckEnabled=bool:True
+OVESETUP_SYSTEM/memCheckEnabled=bool:False
 OVESETUP_SYSTEM/nfsConfigEnabled=bool:False
 OVESETUP_PKI/organization=str:Test
 OVESETUP_CONFIG/isoDomainMountPoint=none:None
