fix using ost-images without lagofy
In that case drop add_plain_repos.sh and keep using reposync(add_local_repo.sh)

Change-Id: Ia399697d280ee299815dc5f83b812ec6b739fe5d
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -45,7 +45,7 @@ domains:
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
-        {%- if env.add_plain_repos != "0" | default(false) %}
+        {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
         - add_plain_repos.sh
         {%- else %}
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
@@ -102,7 +102,7 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        {%- if env.add_plain_repos != "0" | default(false) %}
+        {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
         - add_plain_repos.sh
         {%- else %}
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
