--- a/basic-suite-4.3/vars/main.yml
+++ b/basic-suite-4.3/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  engine: el7.7-base-2
-  host: el7.7-base-2
+  engine: el7.8-base
+  host: el7.8-base
 hostCount: 2
 install_storage_with_lago_deploy: false
 install_ovirt_host: true
