Move he basic suite master to el8
Change-Id: Id90ce94d3d5ed20f1f4551a9d8cf7256c8533faa
Signed-off-by: Galit <galfrid@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -23,7 +23,13 @@ stage:
         - compat-4.2_suite_master
         - compat-4.3_suite_master
         - he-basic_suite_4.3
-        - he-basic_suite_master
+        - he-basic_suite_master:
+            distributions:
+              - el7
+              - el8:
+                  runtime-requirements:
+                    hostdistro: same
+                    support-nesting-level: 2
         - network_suite_4.3
         - network_suite_master:
             distributions:
