Run performance suite on el8
Change-Id: I0af58367263a7918c7fc4aebc0d5b4bcb22837a4
Signed-off-by: Galit <galfrid@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -38,7 +38,13 @@ stage:
                   runtime-requirements:
                     hostdistro: same
                     support-nesting-level: 2
-        - performance_suite_master
+        - performance_suite_master:
+            distributions:
+             - el7
+             - el8:
+                 runtime-requirements:
+                   hostdistro: same
+                   support-nesting-level: 2
         - upgrade-from-release_suite_4.3
         - upgrade-from-prevrelease_suite_4.3
         - test-ost-container:
