setup: Use latest version of packages
We need the 'state: latest' in dnf installation step - otherwise
we may end up with old 'python3-paramiko' that doesn't work with lago.

Change-Id: I6385f5b5cc63ccf43f6eba8d7a40e109c06e5ac6
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -76,6 +76,7 @@
               - python3-ansible-runner
               - python3-ovirt-engine-sdk4
               - python3-paramiko
+            state: latest
           become: true
 
       always:
