network: Readd network-suite-4.3 from check-patch
Network suite 4.3 has been removed from check-patch on master, but we
want to have it there in ovirt-engine-4.3 branch

Change-Id: I9928cd32bb304cea200513f201ddc665550084b6
Signed-off-by: Martin Perina <mperina@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -28,6 +28,7 @@ stage:
                   runtime-requirements:
                     hostdistro: same
                     support-nesting-level: 2
+        - network_suite_4.3
         - network_suite_master:
             distributions:
               - el7
@@ -87,4 +88,4 @@ runtime-requirements:
   support-nesting-level: 2
   isolation_level: container
 release-branches:
-  master: [ovirt-master, ovirt-4.3]
+  master: [ovirt-master, ovirt-engine-4.3]
